# hg_global_localizer

./: .gitignore  README.md
VPS_localizer/: CMakeLists.txt  package.xml
VPS_localizer/launch/: kidnapper_magok.launch
VPS_localizer/src/: kaze.py  kidnapper.py
map_db_generator/: CMakeLists.txt  package.xml
map_db_generator/launch/: dataset_gen.launch
map_db_generator/rviz/: map.rviz
map_db_generator/src/: localizer.py  map_saver.py
placeNet/: CMakeLists.txt  package.xml
placeNet/data/: map.pcd  meta.json  train_my.json
placeNet/include/placeNet/: knn.py  orb.py
placeNet/json/: train.json
placeNet/launch/: kidnapper.launch  kidnapper_HM2.launch  kidnapper_gangnam.launch  train_dataset.launch  train_dataset_HM2.launch  train_dataset_gangnam.launch
placeNet/rviz/: map.rviz
placeNet/src/: kidnapper.py  pcd_reader.cpp
